--- a/web/2thproject/src/stylesheets/register.scss
+++ b/web/2thproject/src/stylesheets/register.scss
@@ -8,6 +8,10 @@
             width: 400px;
             height: 50px;
             border-radius: 8px;
+            font-weight: 900;
+            padding-left: 1rem;
+            margin-bottom: 0.5rem;
         }
     }
+    align-items: center;
 }
