--- a/web/2thproject/src/stylesheets/index.scss
+++ b/web/2thproject/src/stylesheets/index.scss
@@ -6,7 +6,9 @@
     box-sizing: border-box;
     font-family: 'Noto Sans KR', sans-serif;
 } // 초기화
-
+a {
+    text-decoration: none;
+}
 html {
     font-size: 16px;
 }
