add mypage form

--- a/web/2thproject/src/stylesheets/nav.scss
+++ b/web/2thproject/src/stylesheets/nav.scss
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    border-bottom: solid 2px #C4C4C3;
 }
 #nav ul {
     display: flex;
