--- a/web/2thproject/src/stylesheets/nav.scss
+++ b/web/2thproject/src/stylesheets/nav.scss
@@ -24,6 +24,7 @@
     border: 1px solid #FFCD58;
     border-radius: 5px;
     padding: 3px 6px 3px 6px;
+    cursor: pointer;
 }
 
 #nav #nav-write-button {
@@ -32,6 +33,7 @@
     border-color: #000000;
     padding: 3px 8px 3px 8px;
     margin-right: 0.4rem;
+    cursor: pointer;
 }
 
 #nav #nav-button-border {
