--- a/web/2thproject/src/stylesheets/home.scss
+++ b/web/2thproject/src/stylesheets/home.scss
@@ -1,6 +1,7 @@
 .like_count {
     display: flex;
     margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 .like_count > img {
@@ -12,4 +13,10 @@
 
 .like_count > p {
     margin-left: 4px;
+}
+
+.cJFRfY, .jVxgPD {
+    display: flex !important;
+    flex-wrap: wrap;
+    justify-content: space-evenly !important;
 }
