--- a/web/2thproject/src/stylesheets/register.scss
+++ b/web/2thproject/src/stylesheets/register.scss
@@ -21,7 +21,7 @@
     color: dbdbdb;
 }
 
-.register h1 {
+#register_title {
     font-size: 1.5rem;
 }
 
@@ -45,4 +45,8 @@
     background-color: #ffcd58;
     color: #ffffff;
     border-color: #ffcd58;
+}
+
+#mimirok_title {
+    margin-top: 2em;
 }
